--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -29,7 +29,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    compile 'com.github.huteri:analogclock:0.0.1'
+//    compile 'com.github.huteri:analogclock:0.0.1'
+
+    compile project(':analogclock')
 }
 
 repositories {
